still fixing z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,6 +128,7 @@ header {
     right: 2rem;
     top: 60px;
     height: 0;
+    backdrop-filter: blur(15px);
     border-radius: 10px;
     overflow: hidden;
 
